// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner (snapshot) > matches custom-size snapshot 1`] = `
<div>
  <svg
    aria-label="Loading"
    class="lucide lucide-loader-circle animate-spin shrink-0 text-primary"
    fill="none"
    height="24"
    role="status"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</div>
`;

exports[`Spinner (snapshot) > matches default snapshot 1`] = `
<div>
  <svg
    aria-label="Loading"
    class="lucide lucide-loader-circle animate-spin shrink-0"
    fill="none"
    height="16"
    role="status"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
</div>
`;
